tests/negative/runtime/format_no_markers_with_args/input.ci
void main() {
    print(format("plain", ["x"]) + "\n");
}
